# simple_license_manager

./: .gitignore  LICENSE  README.md  licmg.toml  pyproject.toml
docs/: integration_guide.md  sqlite-terminal-基礎.md
licmg/: __init__.py  cli.py  plugin.py
licmg/commands/: key.py  license.py  project.py  sdk.py
licmg/core/: generate_keys.py
licmg/core/db/: crud.py  engine.py  models.py
licmgr/: __init__.py  cli.py  plugin.py  tui.py
licmgr/commands/: db.py  key.py  license.py  project.py  sdk.py
licmgr/core/: dbmaint.py  generate_keys.py  import_key.py  keycheck.py  sign_license.py
licmgr/core/db/: __init__.py  crud.py  engine.py  models.py
licmgr/data/client_sdk/: bootstrap.py
rich_deploy/: __init__.py  cli.py  plugin.py
rich_deploy/commands/: __init__.py  key.py  license.py  project.py  sdk.py
rich_deploy/core/: __init__.py  generate_keys.py
rich_deploy/core/db/: engine.py  models.py
rich_deploy/data/client_sdk/: get_fingerprint.py  verify_license.py
tests/: test_delete_features.py  test_new_features.py
tools/: cmd_export.py  cmd_keys.py  cmd_license.py  cmd_project.py  main.py  ui.py
