[project]
name = "rich-deploy"
version = "0.1.0"
description = "Cross-project tooling utilities for offline license signing"
requires-python = ">=3.10,<3.14"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
cryptography = ">=46.0.0"
rich         = ">=13.0.0"
sqlalchemy   = ">=2.0.0"
tomli        = { version = ">=2.0.0", python = "<3.11" }
questionary = "^2.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
