[project]
name = "licmgr"
version = "0.1.0"
description = "Offline RSA-2048 license management — standalone CLI and Poetry plugin"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<3.14"

[tool.poetry]
packages = [{include = "licmgr"}]

[tool.poetry.dependencies]
python       = ">=3.10,<3.14"
cryptography = ">=46.0.0"
rich         = ">=13.0.0"
sqlalchemy   = ">=2.0.0"
cleo         = ">=2.1.0,<3.0.0"
tomli        = { version = ">=2.0.0", python = "<3.11" }
questionary  = "^2.1.1"

[tool.poetry.scripts]
licmgr = "licmgr.cli:main"

[tool.poetry.plugins."poetry.application.plugin"]
"licmgr" = "licmgr.plugin:LicmgrPlugin"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
